[package]
name = "fibonacci-sequence-sample"
version = "0.0.0"
authors = ["Jose Quintana <git.io/joseluisq>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
